--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "www.example.com"
+baseURL = "www.goacademy.ee"
 languageCode = "en-us"
-title = "Hugo Whisper Theme"
+title = "Go Academy Free Online Courses for Entrepreneurs"
 #themesDir = "../.."
 theme = "hugo-whisper-theme"
 
@@ -25,7 +25,7 @@ summaryLength = 30
 [params]
   google_analytics_id=""
   homepage_button_link = '/docs'
-  homepage_button_text = 'Read The Docs'
+  homepage_button_text = 'Check out the materials'
   homepage_intro = 'Whisper is a documentation theme built with Hugo. The design and functionality is intentionally minimal.'
   homepage_image = '/images/terminal.gif'
 
@@ -33,16 +33,16 @@ summaryLength = 30
   # enable_anchor_link = true
 
   [params.homepage_meta_tags]
-    meta_description = "Hugo Whisper is a documentation theme built with Hugo."
-    meta_og_title = "Hugo Whisper Theme"
+    meta_description = "Go Academy Free Online Courses for Entrepreneurs."
+    meta_og_title = "GoAcademy"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-whisper.netlify.com"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
-    meta_og_description = "Hugo Whisper is a documentation theme built with Hugo."
-    meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_og_url = "https://www.goacademy.ee"
+    meta_og_image = ""
+    meta_og_description = "Go Academy Free Online Courses"
+    meta_twitter_card = ""
+    meta_twitter_site = ""
+    meta_twitter_creator = ""
 
   [params.logo]
-      mobile = "/images/logo-mobile.svg"
-      standard  = "/images/logo.svg"
+      mobile = "/images/gologo.svg"
+      standard  = "/images/gologo.svg"
