--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ summaryLength = 30
     weight = 1
 
 [[menu.main]]
-    name = "Docs"
+    name = "Materials"
     url = "/docs/"
     weight = 2
 
