--- a/config.toml
+++ b/config.toml
@@ -34,10 +34,10 @@ summaryLength = 30
 
   [params.homepage_meta_tags]
     meta_description = "Go Academy Free Online Courses for Entrepreneurs."
-    meta_og_title = "GoAcademy"
+    meta_og_title = "Go Academy"
     meta_og_type = "website"
     meta_og_url = "https://www.goacademy.ee"
-    meta_og_image = "/images/gologo.svg"
+    meta_og_image = "/images/go_og.png"
     meta_og_description = "Go Academy Free Online Courses"
     meta_twitter_card = ""
     meta_twitter_site = ""
